# AnkanRust

./: .gitignore  Cargo.toml  README.md  Trunk.toml  ankan.wasm  bootstrap.js  index.html  index.scss  main.js  package-lock.json  package.json  rollup.config.js  webpack.config.js  wrangler.toml
.github/workflows/: pipeline.yml
src/: app.rs  lib.rs  main.rs  markdown.rs  slides_data.rs  switch.rs
src/app/: app.less  mod.rs
src/app/components/: mod.rs
src/app/components/slides/: mod.rs  slides.less
src/app/pages/: home.rs  slides.rs
src/app/pages/home/: mod.rs
src/app/pages/slides/: data.rs  mod.rs
src/pages/: home.rs  mod.rs  slides.rs
static/: index.html  manifest.json  prism.js
static/api/slide/: page_0.html  page_0.md  page_1.html  page_1.md  page_10.html  page_11.html  page_12.html  page_13.html  page_14.html  page_15.html  page_16.html  page_17.html  page_18.html  page_19.html  page_2.html  page_20.html  page_21.html  page_22.html  page_23.html  page_24.html  page_25.html  page_26.html  page_27.html  page_28.html  page_29.html  page_3.html  page_4.html  page_5.html  page_6.html  page_7.html  page_8.html  page_9.html
static/assets/: prism.css  prism.js
style/: style.less
style/lib/: prism.less
style/pages/: home.less  main.less  slides.less
workers-site/: index.js
