[package]
name = "rust_talk"
version = "0.1.0"
authors = ["Alexander Herlin <alexander.herlin@outlook.com>"]
edition = "2018"
repository = "https://github.com/Herlix/rust_talk"
homepage = "https://github.com/Herlix/rust_talk"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A simple website for a Rust pressentation"

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true

[features]
default = ["console_error_panic_hook"]

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
yew-router = "0.14"
wasm-bindgen = "0.2"
anyhow = "1.0"
web-sys="0.3"
log = "0.4"
web_logger = "0.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }


[dev-dependencies]
wasm-bindgen-test = "0.3"