[package]
name = "ankan_rust"
version = "0.1.0"
authors = ["Alexander Herlin <alexander.herlin@outlook.com>"]
edition = "2018"
repository = "https://github.com/Herlix/AnkanRust"
homepage = "https://rust.kvarteretankan13.online/"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A simple website for a Rust pressentation"

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# link time optimization using using whole-program analysis
lto = true

[dependencies]
yew = "0.17"
yew-router = "0.14"
yewtil = "0.3"
wasm-bindgen = "0.2"
anyhow = "1.0"
web-sys="0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"


# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = "0.4.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = "0.1.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"